created basic files structure

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,8 @@
 	<title>Dungeon Game</title>
 </head>
 <body>
-	
+	<script src="lib/pixi.js"></script>
+	<script src="js/main.js"></script>
+	<script src="js/Game.class.js"></script>
 </body>
 </html>
