created basic game class methods

--- a/www/index.html
+++ b/www/index.html
@@ -3,10 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<title>Dungeon Game</title>
+	<style>
+		html, body {
+			text-align: center;
+		}
+	</style>
 </head>
 <body>
 	<script src="lib/pixi.js"></script>
-	<script src="js/main.js"></script>
 	<script src="js/Game.class.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
