added character class

--- a/www/index.html
+++ b/www/index.html
@@ -13,5 +13,6 @@
 	<script src="lib/pixi.js"></script>
 	<script src="js/Game.class.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/Character.class.js"></script>
 </body>
 </html>
