implemented level on Game class

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
 <body>
 	<script src="lib/pixi.js"></script>
 	<script src="js/Game.class.js"></script>
+	<script src="js/tilemap.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
