created keyboard class

--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 	<script src="lib/pixi.js"></script>
+	<script src="js/Keyboard.class.js"></script>
 	<script src="js/Game.class.js"></script>
 	<script src="js/tilemap.js"></script>
 	<script src="js/main.js"></script>
