created character and player class

--- a/www/index.html
+++ b/www/index.html
@@ -12,9 +12,10 @@
 <body>
 	<script src="lib/pixi.js"></script>
 	<script src="js/Keyboard.class.js"></script>
+	<script src="js/Character.class.js"></script>
+	<script src="js/Player.class.js"></script>
 	<script src="js/Game.class.js"></script>
 	<script src="js/tilemap.js"></script>
 	<script src="js/main.js"></script>
-	<script src="js/Character.class.js"></script>
 </body>
 </html>
