--- a/www/index.html
+++ b/www/index.html
@@ -11,11 +11,16 @@
 </head>
 <body>
 	<script src="lib/pixi.js"></script>
+	<!-- Static -->
+	<script src="js/Collision.class.js"></script>
 	<script src="js/Keyboard.class.js"></script>
+	<script src="js/Helper.class.js"></script>
+	<script src="js/tilemap.js"></script>
+	<script src="js/Game.class.js"></script>
+	
 	<script src="js/Character.class.js"></script>
 	<script src="js/Player.class.js"></script>
-	<script src="js/Game.class.js"></script>
-	<script src="js/tilemap.js"></script>
+	
 	<script src="js/main.js"></script>
 </body>
 </html>
